	  worlds, and gives the player a little control over animal
	  spawning, reducing frustrating waiting.

	- Finally added renewable diamond recipe.  This should unlock
	  some high-tech items in renewablock, like lenses and
	  glowstone.

	- Made undesirable abominations more common in animal cross-
	  breeding, to make the experience more... interesting...


v0.24
	- Added diamond recycling recipe for jukebox.

	- Refinements to glowstone production to prevent trivial
	  exploits that make automated production too simple.  Redstone
	  needs 5 seconds to "warm up" after being placed before it can
	  be cooked into glowstone, and there is roughly a half second
	  delay between pulses and the reaction, to avoid creating an
	  incentive to consume too much CPU on the server.

	- Alert client-side mods to the presence of BWR via a custom
	  plugin channel.  An upcoming version of CraftGuide is
	  expected to use this to automatically add BWR recipes to the
	  recipe list.

	- Pull Flatcore Spawn back out, as upstream HC spawn has been
	  fixed to work in superflat.


v0.23
	- Glowstone is now renewable: redstone has a chance of absorbing
	  concentrated sunlight when experiencing a change in potential,
	  converting it to glowstone.

	- Significant refactoring (mostly renaming) in code, to bring
	  naming convention more in line with java coding standard
	  (http://geosoft.no/development/javastyle.html).

	- Cobwebs can now be made by brewing silk string with something
	  suitably sticky.  Don't throw too much string in or you'll end
	  up with a matted mess.

	- Added Flatcore Spawn.  This replaces hardcore spawn, and works
	  very much like it, but should also allow you to spawn in
	  hardcore locations in superflat worlds where there is little
	  or no terrain at or above Y=64.


v0.22
	- Added alternative method to create nether portals when
	  obsidian (or diamonds to collect it) is not available.
	  A portal frame can be built out of emerald, then tainted by