@@ -13,6 +13,10 @@ v0.25
 	- Made undesirable abominations more common in animal cross-
 	  breeding, to make the experience more... interesting...
 
+	- Wolf breeding automation added.  Wolves consume recreational
+	  chemicals when fed to them with their food, which acts as
+	  an aphrodesiac that makes them willing to mate while seated.
+
 
 v0.24
 	- Added diamond recycling recipe for jukebox.
